force-app/main/objects/Future_Product__c.object
<CustomObject>
    <fields>
        <fullName>Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add-On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basis_of_Fees__c</fullName>
        <inlineHelpText>Select the usage type that the subscription is based on.  If “other” is chosen, text box must be populated.</inlineHelpText>
        <label>Basis of Fees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assessments and Reports</fullName>
                </value>
                <value>
                    <fullName>Candidates</fullName>
                </value>
                <value>
                    <fullName>Full-Time Equivalents (FTEs)</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
                <value>
                    <fullName>CPS Days</fullName>
                </value>
                <value>
                    <fullName>LPS Days</fullName>
                </value>
                <value>
                    <fullName>Employees</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Participants</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                    <isActive>false</isActive>
                    <label>Applications</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Cross-sell: subscription</fullName>
                </value>
                <value>
                    <fullName>Existing customer: non-subscription</fullName>
                </value>
                <value>
                    <fullName>New customer: subscription</fullName>
                </value>
                <value>
                    <fullName>New customer: non-subscription</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Friendly_Name__c</fullName>
        <formula>Product__r.Client_Friendly_Name__c</formula>
        <label>Client Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year__c</fullName>
        <label>Contract Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delete_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used to delete the future products if set True from Configurator Tool</description>
        <label>Delete Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <description>This captures the discount value per line, mapped from Configurator i.e the difference of List Price &amp; Sales Price</description>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hiring_Need__c</fullName>
        <description>This field is used to replace the existing proposition field.</description>
        <inlineHelpText>Select the interest that best defines the scope of the client’s project.
If the project is mixed then select whichever is the largest element.</inlineHelpText>
        <label>Client Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Acquisition</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>TAandTMCombined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <inlineHelpText>The field value will be populated from Rate Card Import.</inlineHelpText>
        <label>Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price/Basis of Fees</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Services__c</fullName>
        <label>Number of Service Deliveries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Future_Year_Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Form_Category__c</fullName>
        <formula>TEXT(Product__r.Order_Form_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Form Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Basis of Fees - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Level__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Package Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Offering Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Proposition__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate Essential</fullName>
                </value>
                <value>
                    <fullName>Graduate Advanced</fullName>
                </value>
                <value>
                    <fullName>Graduate Ultimate</fullName>
                </value>
                <value>
                    <fullName>Volume Essential</fullName>
                </value>
                <value>
                    <fullName>Volume Advanced</fullName>
                </value>
                <value>
                    <fullName>Tech Essential</fullName>
                </value>
                <value>
                    <fullName>Tech Advanced</fullName>
                </value>
                <value>
                    <fullName>Managerial Essential</fullName>
                </value>
                <value>
                    <fullName>Managerial Advanced</fullName>
                </value>
                <value>
                    <fullName>Managerial Ultimate</fullName>
                </value>
                <value>
                    <fullName>Video Essential</fullName>
                </value>
                <value>
                    <fullName>Video Advanced</fullName>
                </value>
                <value>
                    <fullName>Video Ultimate</fullName>
                </value>
                <value>
                    <fullName>VACDC Essential</fullName>
                </value>
                <value>
                    <fullName>VACDC Advanced</fullName>
                </value>
                <value>
                    <fullName>VACDC Ultimate</fullName>
                </value>
                <value>
                    <fullName>Professional Essential</fullName>
                </value>
                <value>
                    <fullName>Professional Advanced</fullName>
                </value>
                <value>
                    <fullName>Professional Ultimate</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre Essential</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre Advanced</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre Ultimate</fullName>
                </value>
                <value>
                    <fullName>Development Center Advanced</fullName>
                </value>
                <value>
                    <fullName>Development Center Ultimate</fullName>
                </value>
                <value>
                    <fullName>Mobilize Essential</fullName>
                </value>
                <value>
                    <fullName>Mobilize Advanced</fullName>
                </value>
                <value>
                    <fullName>Mobilize Ultimate</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>TMReview Talent Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Central</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>iAssess</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricebook_Entry_Id__c</fullName>
        <label>Pricebook Entry Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product &amp; Assessment</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Future_Year_Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposition__c</fullName>
        <inlineHelpText>Select the closest use-case(s) that best defines client requirements.</inlineHelpText>
        <label>Use-case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate Hiring</fullName>
                </value>
                <value>
                    <fullName>Volume Hiring</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring</fullName>
                </value>
                <value>
                    <fullName>Sales Hiring</fullName>
                </value>
                <value>
                    <fullName>Managerial Hiring</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership / Executive Hiring </fullName>
                </value>
                <value>
                    <fullName>Vocational</fullName>
                </value>
                <value>
                    <fullName>Organizational Fit Hiring</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Mobilize: Leadership &amp; Succession Planning</fullName>
                </value>
                <value>
                    <fullName>Mobilize: Potential</fullName>
                </value>
                <value>
                    <fullName>Review: Sales</fullName>
                </value>
                <value>
                    <fullName>Review: Digital Readiness</fullName>
                </value>
                <value>
                    <fullName>Review: Remote Work</fullName>
                </value>
                <value>
                    <fullName>Review: Custom / others</fullName>
                    <label>Review: Custom / Others</label>
                </value>
                <value>
                    <fullName>Develop Talent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RenewableNew__c</fullName>
        <label>Renewability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewable_Product__c</fullName>
        <formula>IF(ISPICKVAL(Product__r.Renewable__c,&apos;Yes&apos;), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price/Basis of Fees</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>PS Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Cap__c</fullName>
        <label>Solution Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Talent_Level__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Talent Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional / Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Vocational</fullName>
                </value>
                <value>
                    <fullName>Entry Level / Associate</fullName>
                </value>
                <value>
                    <fullName>Graduate and Intern</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor Leader</fullName>
                </value>
                <value>
                    <fullName>Senior leadership</fullName>
                </value>
                <value>
                    <fullName>All Levels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Sales_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_Allowance__c</fullName>
        <inlineHelpText>Select if usage is capped or uncapped.</inlineHelpText>
        <label>Usage Allowance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capped</fullName>
                </value>
                <value>
                    <fullName>Uncapped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Cap_or_Estimation__c</fullName>
        <inlineHelpText>If Basis of Fees is Candidates, Applications, Assessments, Units - enter the usage cap or usage estimate. If FTEs - enter FTE number used in calculator</inlineHelpText>
        <label>Total Equivalent Units</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product &amp; Service (Future Period)</label>
    <nameField>
        <displayFormat>P&amp;S(FY)-{0000}</displayFormat>
        <label>Future OppLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products &amp; Services (Future Period)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EquivalentUnitsRequiredforProductFamily</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(Product__r.Family , &quot;Product&quot;) &amp;&amp; ISBLANK(Usage_Cap_or_Estimation__c) &amp;&amp; NOT(ISPICKVAL( Basis_of_Fees__c , &quot;Units&quot;)) &amp;&amp; $User.Id &lt;&gt; &apos;0054G00000AOE8n&apos; &amp;&amp; NOT(ISPICKVAL(Platform__c , &quot;iAssess&quot;)) , true, false)</errorConditionFormula>
        <errorMessage>Equivalent units is required for Master Product Family : Product and selected platform is not iAccess.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ListPriceSalesPriceCannotBeNegetive</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ( ListPrice__c  &lt; 0 ||  Sales_Price__c  &lt; 0), true, false)</errorConditionFormula>
        <errorMessage>List Price or Sales Price cannot be negetive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_field_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK( Other__c ) , ISPICKVAL( Basis_of_Fees__c ,&quot;Other&quot;))</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>Please provide additional information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlatformRequiredforProductFamily</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Product__r.Family , &quot;Product &amp; Platform&quot;) &amp;&amp; ISPICKVAL( Platform__c,&quot;&quot; ) , true, false)</errorConditionFormula>
        <errorMessage>Platform is required for Product Family : Product &amp; Platform</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_OAT_from_editing_Pricebooks</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Text(Opportunity__r.StageName)== $Label.Opportunity_Stage_6), OR(ISCHANGED(Quantity__c),ISCHANGED(Sales_Price__c)), $Permission.OATs,NOT(Opportunity__r.Apply_Price_Increase_Switch__c))</errorConditionFormula>
        <errorMessage>You do not have the permission to edit Sales price or Quantity field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_creation_of_pricebooks</fullName>
        <active>false</active>
        <description>Price books items cannot be added on a Closed Won or Closed Lost Opportunity</description>
        <errorConditionFormula>AND(
	ISNEW(), 
	NOT(Opportunity__r.Skip_Validation_Auto_Renewal__c),
	OR(
		(Text(Opportunity__r.StageName)== $Label.Opportunity_Stage_6),
		(Text(Opportunity__r.StageName)== $Label.Opportunity_Stage_7 )
	),
	IF(CONTAINS($Profile.Name, &apos;System Admin&apos;),false,true)
	)</errorConditionFormula>
        <errorMessage>Products cannot be added on a Closed Won or Closed Lost Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UsageAllowanceRequiredforProductFamily</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Product__r.Family , &quot;Product &amp; Platform&quot;) &amp;&amp; ISPICKVAL(  Usage_Allowance__c  ,&quot;&quot; ) , true, false)</errorConditionFormula>
        <errorMessage>Usage Allowance is required for Product Family : Product &amp; Platform</errorMessage>
    </validationRules>
</CustomObject>